fix: use Arena.allocateFrom instead of removed allocateUtf8String
Arena.allocateUtf8String(String) was removed when the FFM
API was finalized (JEP 454, JDK 22). The replacement is
Arena.allocateFrom(String), which also encodes as UTF-8
with a trailing NUL terminator.